<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:fillViewport="true"
    android:gravity="center" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:background="@color/bg2"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/account_activity_btn_notregistered"
                android:textColor="@color/content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/radioButtonCiviliteH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_activity_mr" />

                    <RadioButton
                        android:id="@+id/radioButtonCiviliteF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_activity_mme" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_fname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextFirstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_lname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextLastname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_tel"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextTel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="text|phone"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_mobile"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="text|phone"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_date_naissance"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextDateNaissance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:clickable="false"
                    android:enabled="true"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text|phone"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_email"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_pass"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/account_activity_cpass"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/editTextPasswordConfirmation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:background="@drawable/form_champ"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/bt_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/bouton"
                    android:text="@string/account_activity_btn"
                    android:textColor="@color/white"
                    android:textSize="21dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>